--- a/index.html
+++ b/index.html
@@ -7,12 +7,54 @@
   
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Portifólio Dev</title>
 
   <link rel="stylesheet" href="style/index.css">
   <link href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&family=Inconsolata:wght@200..900&family=Maven+Pro:wght@400..900&display=swap" rel="stylesheet">
 </head>
 <body>
-  
+  <header class="flex justify-content-center">
+    <div id="primary" class="grid">
+        <div id="primary-img">
+          <img src="assets/avatar.png" alt="">
+        </div>
+        <h3 class="text-subtitle">
+          Hello World! Meu nome é <span>Heitor T. Bernardo</span> e sou
+        </h3>
+        <h1 class="text-2xl">Desenvolvedor Fullstack</h1>
+        <p text-sm>
+          Transformo necessidades em aplicações reais, evolventes e funcionais. Desenvolvo sistemas através da minha paixão pela tecnologia, contribuindo com soluções inovadoras e eficazes para desafios complexos.
+        </p>
+    </div>
+
+    <div id="secondary" class="flex">
+       <div>
+            <img src="assets/icons/GitHub.svg" alt="Ícone do GitHub" />
+            <span>Github</span>
+          </div>
+          <div>
+            <img src="assets/icons/HTML.svg" alt="Ícone do HTML" />
+            <span>HTML</span>
+          </div>
+          <div>
+            <img src="assets/icons/CSS.svg" alt="Ícone do CSS" />
+            <span>CSS</span>
+          </div>
+          <div>
+            <img src="assets/icons/JavaScript.svg" alt="Ícone do JavaScript" />
+            <span>JavaScript</span>
+          </div>
+          <div>
+            <img src="assets/icons/React.svg" alt="Ícone do React" />
+            <span>React</span>
+          </div>
+          <div>
+            <img src="assets/icons/Node.js.svg" alt="Ícone do Node.js" />
+            <span>Node.js</span>
+          </div>
+    </div>
+
+    <img src="assets/icons/CaretDoubleDown.svg" alt="">
+  </header>
 </body>
 </html>
