--- a/index.html
+++ b/index.html
@@ -56,5 +56,65 @@
 
     <img src="assets/icons/CaretDoubleDown.svg" alt="">
   </header>
+
+  <main class="grid justify-content-center">
+    <section id="projects-titles" class="grid titles">
+      <h3 class="text-subtitle">Meu trabalho</h3>
+       <h2 class="text-xl">Veja os projetos em destaque</h2>
+    </section>
+
+    <section id="projects" class="grid grid-cols-3 gap-24 text-sm">
+      <figure class="card">
+        <img src="assets/thumbnail/Thumbnail_Project-01.png" alt="">
+        <figcaption>
+          <h3 class="text-lg">Travelgram</h3>
+          <p>Rede social onde as pessoas mostram os registros de suas viagens pelo mundo</p>
+        </figcaption>
+      </figure>
+      
+      <figure class="card">
+        <img src="assets/thumbnail/Thumbnail_Project-02.png" alt="">
+        <figcaption>
+          <h3 class="text-lg">Tech News</h3>
+          <p>Homepage de um portal de notícias sobre a área de tecnologia</p>
+        </figcaption>
+      </figure>
+
+      <figure class="card">
+        <img src="assets/thumbnail/Thumbnail_Project-03.png" alt="">
+        <figcaption>
+          <h3 class="text-lg">Página de receita</h3>
+          <p>Página com o passo a passo de uma receita para cupcakes</p>
+        </figcaption>
+      </figure>
+
+      <figure class="card">
+        <img src="assets/thumbnail/Thumbnail_Project-04.png" alt="">
+        <figcaption>
+          <h3 class="text-lg">Zingen</h3>
+          <p>Landing Page completa e responsiva de um aplicativo de Karaokê</p>
+        </figcaption>
+      </figure>
+
+      <figure class="card">
+        <img src="assets/thumbnail/Thumbnail_Project-05.png" alt="">
+        <figcaption>
+          <h3 class="text-lg">Refund</h3>
+          <p>Um sistema para pedido e acompanhamento de reembolso </p>
+        </figcaption>
+      </figure>
+
+      <figure class="card">
+        <img src="assets/thumbnail/Thumbnail_Project-06.png" alt="">
+        <figcaption>
+          <h3 class="text-lg">Página de turismo</h3>
+          <p>Página com as principais informações para quem quer viajar para Busan</p>
+        </figcaption>
+      </figure>
+
+    </section>
+
+
+  </main>
 </body>
 </html>
