estilizando a seção main

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </p>
     </div>
 
-    <div id="secondary" class="flex">
+    <div id="secondary" class="container flex">
        <div>
             <img src="assets/icons/GitHub.svg" alt="Ícone do GitHub" />
             <span>Github</span>
