--- a/index.html
+++ b/index.html
@@ -111,10 +111,33 @@
           <p>Página com as principais informações para quem quer viajar para Busan</p>
         </figcaption>
       </figure>
-
     </section>
-
-
   </main>
+  <aside class="grid justify-content-center">
+    <section id="my-services" class="grid titles">
+      <h3 class="text-subtitle">Meus Serviços</h3>
+      <h2 class="text-xl">Como posso ajudar o seu negócio</h2>
+
+      <div id="services" class="flex column-gap-24">
+        <div>
+          <img src="assets/icons/Devices.svg" alt="">
+          <h3 id="text-lg">Websites e Aplicativos</h3>
+          <p>Desenvolvimento de interfaces</p>
+        </div>
+        <div>
+          <img src="assets/icons/HardDrives.svg" alt="">
+          <h3 class="text-lg">Websites e Aplicativos</h3>
+          <p>Desenvolvimento de interfaces</p>
+        </div>
+        <div>
+          <img src="assets/icons/Infinity.svg" alt="">
+          <h3 class="text-lg">Websites e Aplicativos</h3>
+          <p>Desenvolvimento de interfaces</p>
+        </div>
+      </div>
+    </section>
+  </aside>
+
+  
 </body>
 </html>
