estilizando a seção aside

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <div id="services" class="flex column-gap-24">
         <div>
           <img src="assets/icons/Devices.svg" alt="">
-          <h3 id="text-lg">Websites e Aplicativos</h3>
+          <h3 class="text-lg">Websites e Aplicativos</h3>
           <p>Desenvolvimento de interfaces</p>
         </div>
         <div>
@@ -138,6 +138,6 @@
     </section>
   </aside>
 
-  
+
 </body>
 </html>
