--- a/index.html
+++ b/index.html
@@ -137,7 +137,38 @@
       </div>
     </section>
   </aside>
+  
+  <footer class="grid justify-content-center">
+    <div id="my-contacts" class="grid justify-content-center">
+      <h3 class="text-subtitle">Contato</h3>
+      <h2 class="text-xl">Gostou do meu trabalho?</h2>
+      <p class="text-sm">Entre em contato ou acompanhe as minhas redes sociais!</p>
+    </div>
 
+    <div id="contact-links" class="grid">
+     <div id="link-linkedin" class="flex card-footer">
+        <span id="logo-linkedin"></span>
+        <p class="text-md">Linkedin</p>
+        <img src="assets/icons/ArrowUpRightBlue.svg" alt="seta cima azul">
+      </div>
+      <div id="link-instagram" class="flex card-footer">
+        <span id="logo-instagram"></span>
+        <p class="text-md">Instagram</p>
+        <img src="assets/icons/ArrowUpRightBlue.svg" alt="seta cima azul">
+      </div>
+      <div id="link-github" class="flex card-footer">
+         <span id="logo-github"></span>
+          <p class="text-md">GitHub</p>
+          <img src="assets/icons/ArrowUpRightBlue.svg" alt="seta cima azul">
+      </div>
+      <div id="link-email" class="flex card-footer">
+        <span id="logo-email"></span>
+        <p class="text-md">E-mail</p>
+        <img src="assets/icons/ArrowUpRightBlue.svg" alt="seta cima azul">
+      </div>
+    </div>
+    
+  </footer>
 
 </body>
 </html>
