--- a/index.html
+++ b/index.html
@@ -140,34 +140,33 @@
   
   <footer class="grid justify-content-center">
     <div id="my-contacts" class="grid justify-content-center">
-      <h3 class="text-subtitle">Contato</h3>
-      <h2 class="text-xl">Gostou do meu trabalho?</h2>
-      <p class="text-sm">Entre em contato ou acompanhe as minhas redes sociais!</p>
+  <h3 class="text-subtitle">Contato</h3>
+  <h2 class="text-xl">Gostou do meu trabalho?</h2>
+  <p class="text-sm">Entre em contato ou acompanhe as minhas redes sociais!</p>
     </div>
 
-    <div id="contact-links" class="grid">
-     <div id="link-linkedin" class="flex card-footer">
+    <div id="contacts-link" class="grid">
+      <div id="link-linkedin" class="flex card-footer">
         <span id="logo-linkedin"></span>
         <p class="text-md">Linkedin</p>
-        <img src="assets/icons/ArrowUpRightBlue.svg" alt="seta cima azul">
+        <img src="./assets/icons/ArrowUpRightBlue.svg" alt="seta cima azul">
       </div>
       <div id="link-instagram" class="flex card-footer">
         <span id="logo-instagram"></span>
         <p class="text-md">Instagram</p>
-        <img src="assets/icons/ArrowUpRightBlue.svg" alt="seta cima azul">
+        <img src="./assets/icons/ArrowUpRightBlue.svg" alt="seta cima azul">
       </div>
       <div id="link-github" class="flex card-footer">
-         <span id="logo-github"></span>
-          <p class="text-md">GitHub</p>
-          <img src="assets/icons/ArrowUpRightBlue.svg" alt="seta cima azul">
+        <span id="logo-github"></span>
+        <p class="text-md">GitHub</p>
+        <img src="./assets/icons/ArrowUpRightBlue.svg" alt="seta cima azul">
       </div>
       <div id="link-email" class="flex card-footer">
         <span id="logo-email"></span>
         <p class="text-md">E-mail</p>
-        <img src="assets/icons/ArrowUpRightBlue.svg" alt="seta cima azul">
+        <img src="./assets/icons/ArrowUpRightBlue.svg" alt="seta cima azul">
       </div>
     </div>
-    
   </footer>
 
 </body>
